# resistance-calculator

./: Cargo.toml  README.md
src/: cli.rs  io_main.rs  main.rs
