[package]
name = "resistance-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Yuki2Kisaragi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "reg-calc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
